# Micro-Games

./: README.md
Computer-SpaceGames/: README.md
Computer-SpaceGames/Starship-Takeoff/: README.md
Computer-SpaceGames/Starship-Takeoff/cpp/: Dockerfile  docker-compose-test.yml  docker-compose.yml
Computer-SpaceGames/Starship-Takeoff/cpp/src/: CMakeLists.txt  game.cpp  game.h  main.cpp  test.cpp
